# text-jam-2026

./: .gitignore  LICENSE  Makefile  README.md  board_definition.py  board_initializer.py  board_layout.py  board_renderer.py  client.py  config.py  game_client.py  game_state.py  geometry.py  local_identity.py  message_types.py  messages.py  move_validator.py  network.py  player.py  player_configs.py  pyproject.toml  requirements.txt  server.py  session.py  session_manager.py  session_states.py  theme.py  tui_client.py  win_checker.py
client/: __init__.py  game_client.py  main.py
game/: board_initializer.py  game_state.py  move_validator.py  player_configs.py  win_checker.py
screens/: game_screen.py  identity_screen.py  join_session_screen.py  lobby_screen.py  main_menu.py
server/: main.py  session.py  session_manager.py
shared/: messages.py
src/chinese_checkers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/chinese_checkers/client/: game_client.py  main.py
src/chinese_checkers/game/: board_initializer.py  game_state.py  move_validator.py  player_configs.py  win_checker.py
src/chinese_checkers/server/: main.py  session.py  session_manager.py
src/chinese_checkers/shared/: __init__.py  message_types.py  messages.py  network.py  settings.py
src/chinese_checkers/ui/: board_renderer.py  geometry.py
src/chinese_checkers/ui/screens/: __init__.py  controls_screen.py  game_screen.py  lobby_screen.py  (+4 more)
ui/: __init__.py  board_renderer.py  geometry.py
ui/screens/: game_screen.py  identity_screen.py  join_session_screen.py  lobby_screen.py  main_menu.py
