[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-checkers"
version = "0.1.0"
description = "Networked terminal Chinese Checkers built with Textual"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "textual"
]

[project.scripts]
chinese-checkers = "chinese_checkers.client.main:main"
chinese-checkers-server = "chinese_checkers.server.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]