[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-checkers-game"
version = "0.1.4"
description = "Networked terminal Chinese Checkers built with Textual"
readme = "README.md"
requires-python = ">=3.13"

license = {file = "LICENSE"}

dependencies = [
    "textual"
]

[project.scripts]
chinese-checkers = "chinese_checkers.client.main:main"
chinese-checkers-server = "chinese_checkers.server.main:main"

[project.urls]
Homepage = "https://github.com/carsonthorne"
Repository = "https://github.com/carsonthorne/text-jam-2026"
Issues = "https://github.com/carsonthorne/text-jam-2026/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]